--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "ffmpeg-static": "^5.2.0",
     "googleapis": "^150.0.1",
-    "yt-search": "^2.13.1"
+    "yt-search": "^2.13.1",
+    "ytpl": "^2.3.0"
   }
 }
